corrected the spacing issue associated with the show more events button being removed from page at a certain point

--- a/client/components/EventFeed/card_styles.css
+++ b/client/components/EventFeed/card_styles.css
@@ -42,9 +42,12 @@
   background:lightgray;
   box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.5);
   border-radius: 5%;
-  margin-bottom: 100px;
+  margin-bottom: 5%;
   cursor: pointer;
   width:15%;
+}
+.noButton {
+  padding-bottom: 7%;
 }
 .loaderContainer {
   min-height:800px;
